--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,10 +9,15 @@
   --secondary-color: #e5e5e5;
   --main-font-color: #dd2020;
   --secondary-font-color: #0d0c0c;
+  --white: #ffffff;
+}
+
+html {
+  height: 100%;
 }
 
 body {
-  background-color: var(--main-color);
+  background-image: linear-gradient(115deg, var(--secondary-font-color), var(--main-color), var(--main-font-color), var(--main-color), var(--secondary-font-color));
   height: 100%;
 }
 
@@ -21,7 +26,7 @@ body {
 /* ============= */
 
 header {
-  background-color: var(--secondary-color);
+  background: linear-gradient(to right, var(--main-color), var(--secondary-color), var(--main-color));
   color: var(--main-font-color);
   display: flex;
   justify-content: space-between;
@@ -65,7 +70,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  background: var(--secondary-color);
+  background-color: linear-gradient(to right, var(--main-color), var(--secondary-color), var(--main-color));
 }
 
 footer h2 {
@@ -74,7 +79,6 @@ footer h2 {
 }
 
 .footer-spacer {
-  background-color: black;
   height: 31px;
 }
 
@@ -124,14 +128,14 @@ footer h2 {
   }
 
   nav a:hover {
-    color: var(--secondary-color);
+    color: var(--secondary-font-color);
   }
   
   nav a::before {
     content: '';
     display: block;
     height: 5px;
-    background: var(--secondary-color);
+    background: var(--secondary-font-color);
     position: absolute;
     top: -.25em;
     left: 0;
