--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,6 +59,21 @@ nav a {
 }
 
 /* ============= */
+/* popular styles */
+/* ============= */
+.popular-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+  padding: 15px 10px;
+}
+
+.popular img {
+  width: 100%;
+  height: 100%;
+}
+
+/* ============= */
 /* footer styles */
 /* ============= */
 
@@ -70,7 +85,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: linear-gradient(to right, var(--main-color), var(--secondary-color), var(--main-color));
+  background: linear-gradient(to right, var(--main-color), var(--secondary-color), var(--main-color));
 }
 
 footer h2 {
@@ -148,12 +163,16 @@ footer h2 {
     transform: scale(1, 1);
   }
 
+  .popular-container {
+    padding: 15px 50px;
+  }
+
   /* ============= */
   /* footer styles */
   /* ============= */
   
   footer h2 {
-    font-size: 25px;
+    font-size: 20px;
   }
 
   .footer-spacer {
