--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Limelight&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Limelight', cursive;
 }
 
 :root {
@@ -17,7 +20,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(115deg, var(--secondary-font-color), var(--main-color), var(--main-font-color), var(--main-color), var(--secondary-font-color));
+  background-image: linear-gradient(130deg, var(--secondary-font-color), var(--main-color), var(--main-font-color), var(--main-color), var(--secondary-font-color));
   height: 100%;
 }
 
@@ -58,9 +61,57 @@ nav a {
   text-decoration: none;
 }
 
-/* ============= */
-/* popular styles */
-/* ============= */
+/* =========== */
+/* form styles */
+/* =========== */
+.form-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
+
+input, .login-btn {
+  padding: 8px;
+  margin-bottom: 8px;
+  border-radius: 10px;
+  border: none;
+  font-size: 20px;
+  background-color: var(--secondary-color);
+  color: var(--main-font-color);
+}
+
+input::placeholder {
+  opacity: .5;
+  font-size: 18px;
+  color: var(--main-font-color);
+}
+
+input:focus {
+  outline: none;
+}
+
+.login-btn {
+  font-weight: 900;
+  font-size: 20px;
+  transition: .5s;
+}
+
+.login-btn:hover {
+  background-color: var(--main-font-color);
+  color: var(--secondary-color);
+}
+
+
+/* ==================== */
+/* popular movie styles */
+/* ==================== */
 .popular-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -97,7 +148,7 @@ footer h2 {
   height: 31px;
 }
 
-@media screen and (min-width: 525px) {
+@media screen and (min-width: 625px) {
   header {
     display: grid;
     grid-template-columns: 1fr auto 2fr 4fr 1fr;
@@ -163,6 +214,12 @@ footer h2 {
     transform: scale(1, 1);
   }
 
+  /* =========== */
+  /* form styles */
+  /* =========== */
+  form {
+    width: 50%;
+  }
   .popular-container {
     padding: 15px 50px;
   }
