--- a/client/src/index.css
+++ b/client/src/index.css
@@ -101,6 +101,7 @@ input:focus {
   font-weight: 900;
   font-size: 20px;
   transition: .5s;
+  cursor: pointer;
 }
 
 .login-btn:hover {
@@ -170,6 +171,10 @@ footer h2 {
   nav ul {
     display: flex;
   }
+
+  form {
+    width: 55%;
+  }
 }
 
 @media screen and (min-width: 1000px) {
@@ -186,7 +191,7 @@ footer h2 {
   }
 
   nav {
-    font-size: 35px;
+    font-size: 30px;
   }
 
   nav a {
@@ -218,7 +223,7 @@ footer h2 {
   /* form styles */
   /* =========== */
   form {
-    width: 50%;
+    width: 30%;
   }
   .popular-container {
     padding: 15px 50px;
