--- a/client/src/index.css
+++ b/client/src/index.css
@@ -164,7 +164,7 @@ input:focus {
   width: auto;
   border-radius: 5px;
   margin-right: 4px;
-  margin: 3px auto;
+  margin: auto;
 }
 
 .movie-info {
@@ -326,7 +326,7 @@ footer h2 {
   }
 
   .card-img {
-    margin: 0 10px;
+    margin-right: 10px;
   }
   /* ============= */
   /* footer styles */
