--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,6 +46,9 @@ header {
   top: 0;
 }
 
+header h1 {
+  font-size: 20px;
+}
 header a {
   text-decoration: none;
   color: var(--main-font-color);
@@ -53,7 +56,7 @@ header a {
 
 nav {
   margin-right: 20px;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 nav ul {
@@ -67,7 +70,6 @@ nav li{
 }
 
 nav a {
-  color: var(--main-font-color);
   text-decoration: none;
 }
 
@@ -241,7 +243,7 @@ footer h2 {
     grid-column: 4/5;
     display: flex;
     justify-content: flex-end;
-    font-size: 25px;
+    font-size: 18px;
     margin-right: 0;
   }
 
